Fixed horizontal scroll Added disabled button for reviews Reduced bottom padding in vacancy section

--- a/src/components/pageSections/Acquaintance/index.module.scss
+++ b/src/components/pageSections/Acquaintance/index.module.scss
@@ -34,6 +34,7 @@
 
     @media (max-width: $screenLg) {
         font-size: 3.125vw;
+        margin-bottom: 3.7vw;
     }
 
     @media (max-width: $screenMd) {
@@ -42,6 +43,7 @@
 
     @media (max-width: $screenSm) {
         font-size: 6.66vw;
+        margin-bottom: 7vw;
     }
 }
 
