--- a/src/components/pageSections/HowWeWork/index.module.scss
+++ b/src/components/pageSections/HowWeWork/index.module.scss
@@ -5,9 +5,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     min-height: max(600px, 100vh);
+    overflow: hidden;
 
     @media (max-width: $screenLg) {
         min-height: auto;
