--- a/src/components/pageSections/JoinUs/index.module.scss
+++ b/src/components/pageSections/JoinUs/index.module.scss
@@ -12,11 +12,11 @@
 
     @media (max-width: $screenLg) {
         min-height: auto;
-        padding: 6.5vw 0 17.8vw;
+        padding: 6.5vw 0;
     }
 
     @media (max-width: $screenSm) {
-        padding: 19.5vw 0 50vw;
+        padding: 19.5vw 0;
     }
 }
 
